i added our service images..

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             <h3>Specialized Treatments</h3>
             <p>State-of-the-art facilities for specialized medical treatments.</p>
         </div>
+        <section id="services" class="services">
+            <h2>Our Services</h2>
+            <div class="service">
+                <img src="https://img.freepik.com/free-photo/dentist-showing-teeth-x-ray-reviewing-it-with-nusre-doctor-assistant-working-modern-crowded-stomatological-clinic-patients-sitting-chairs-reception-filling-dental-forms-waiting_482257-3673.jpg?size=626&ext=jpg&ga=GA1.2.1997643698.1703956704&semt=ais" alt="Service 3">
+                <h3>Emergency Care</h3>
+                <p>24/7 emergency medical services with experienced staff.</p>
+            </div>
         <!-- Add more services as needed -->
     </section>
 
